--- a/index.html
+++ b/index.html
@@ -7,6 +7,25 @@
 	<style>
 		h1 {font-family: 'Cormorant Garamond', serif;color:#fff;font-size:3.5em;font-weight:100;}
 		p {font-family: 'work sans', sans-serif;color:#fff;font-weight:300;margin-bottom:30px;}
+		form {
+	  margin: 0;
+		}
+		input,
+		textarea,
+		select {
+		  display: inline-block;
+		  outline: 0;
+		  border-radius: 4px;
+		  padding: 0.5em;
+		  border: 0;
+		  background: #fff;  position: relative;
+		  font-size: inherit;
+		}
+		textarea {
+		  max-width: 100%;
+		  overflow: auto;
+		  resize: vertical;
+		}
 		.container {width: 100vw;height: 100%;}
 		.modal {
 			background:#1a1a1a;
@@ -34,6 +53,29 @@
 			-moz-animation: Gradient 15s ease infinite;
 			animation: Gradient 15s ease infinite;
 		}
+
+		.f { display: flex }
+		.fw { flex-wrap: wrap }
+		.ais { align-items: flex-start }
+		.aie { align-items: flex-end }
+		.aic { align-items: center }
+		.aib { align-items: baseline }
+		.jcs { justify-content: flex-start }
+		.jce { justify-content: flex-end }
+		.jcc { justify-content: center }
+		.jcb { justify-content: space-between }
+		.fa {
+		  flex: 1 1 auto;
+		  min-width: 0;
+		  min-height: 0;
+		}
+		.fa3 { flex:3; }
+
+		.mxa { margin-left: auto; margin-right: auto; }
+		.mr1 { margin-right: 1em }
+		.xmax60 { max-width:60%; }
+
+
 
 		@-webkit-keyframes Gradient {
 			0% {
@@ -76,8 +118,11 @@
 	<div class="container">
 		<div class="modal">
 			<h1>Welcome to your Selfie Mood Ring</h1>
-			<p>Click the button below to find the color of your life</p>
-			<a href="https://www.instagram.com/oauth/authorize/?client_id=34d6c14939524c20b203a605a149e2c2&redirect_uri=http://insta.topset.co/colors.php&response_type=token"><button>Authenticate</button></a>
+			<p>Enter your Instagram profile name below to find the color of your life</p>
+			<form class="f aic jcc mxa xmax60"  action="http://insta.topset.co/colors.html" method="GET">
+			  <input type="text" name="user" class="fa fa3 mr1">
+				<input type="submit" value="Submit" class="fa">
+			</form>
 		</div>
 	</div>
 
